# hf_agents_course

./: .gitignore  Dockerfile  agent.py  answer_questions.py  app.py  audio_agent.py  common.py  docker-compose.yml  image_agent.py  new_react_agent.py  next_agent.py  openrouter_client.py  pyproject.toml  react_agent.py  reasoning_agent.py  requirements.txt  simple_agent.py  system_prompt.txt  system_prompt_2.md  test_agent.py
