[project]
name = "hf-agents-course"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
requires-python = ">=3.11,<4"
dependencies = [
    "agno (>=2.0.3,<3.0.0)",
    "openai (>=1.107.1,<2.0.0)",
    "ddgs (>=9.5.5,<10.0.0)",
    "wikipedia (>=1.4.0,<2.0.0)",
    "arxiv (>=2.2.0,<3.0.0)",
    "pypdf (>=6.0.0,<7.0.0)",
    "gradio[oauth] (>=5.45.0,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false